gobmkida/c2/do_genmove
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:751:10: error: conflicting types for 'do_genmove'
__int64  do_genmove( int *move, int color, float pure_threat_value, int *allowed_moves, double a5, float a6) 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:40:12: note: previous declaration is here
static int do_genmove(int *move, int color, float pure_threat_value,
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:800:12: error: expected expression
*( _OWORD *)&stats.nodes = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:800:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&stats.nodes = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:857:4: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
v13.m128_i32[0] = 0; 
~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:863:21: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
v16 = _mm_cmplt_ss( ( __m128)LODWORD( lower_bound), v13); 
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:864:41: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
v17 = COERCE_FLOAT( _mm_andnot_ps( v16, ( __m128)LODWORD( lower_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -lower_bound) & v16.m128_i32[0]); 
                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:864:127: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
v17 = COERCE_FLOAT( _mm_andnot_ps( v16, ( __m128)LODWORD( lower_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -lower_bound) & v16.m128_i32[0]); 
                                                                                                                           ~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:873:21: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
v36 = _mm_cmplt_ss( ( __m128)LODWORD( upper_bound), v13); 
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:879:35: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
COERCE_FLOAT( _mm_andnot_ps( v36, ( __m128)LODWORD( upper_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -upper_bound) & v36.m128_i32[0])); 
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:879:121: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
COERCE_FLOAT( _mm_andnot_ps( v36, ( __m128)LODWORD( upper_bound)).m128_u32[0] | COERCE_UNSIGNED_INT( -upper_bound) & v36.m128_i32[0])); 
                                                                                                                     ~~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:965:1: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
( __m128)LODWORD( lower_bound), 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:983:59: error: too many arguments to function call, expected 2, have 3
if ( ( unsigned int)revise_thrashing_dragon( color, 15.0, 10.0) ) 
                    ~~~~~~~~~~~~~~~~~~~~~~~               ^~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:57:1: note: 'revise_thrashing_dragon' declared here
static int revise_thrashing_dragon(int color, float advantage);
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:988:66: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
if ( ( unsigned int)review_move_reasons( move, &v47, color, v48, ( __m128)LODWORD( score), allowed_moves, a6) 
                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1007:66: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
if ( ( unsigned int)review_move_reasons( move, &v47, color, v48, ( __m128)LODWORD( score), allowed_moves, a6) 
                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1025:58: error: too many arguments to function call, expected 2, have 3
if ( ( unsigned int)revise_thrashing_dragon( color, 0.0, 0.0) ) 
                    ~~~~~~~~~~~~~~~~~~~~~~~              ^~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:57:1: note: 'revise_thrashing_dragon' declared here
static int revise_thrashing_dragon(int color, float advantage);
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1069:66: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'uint32' (aka 'unsigned int') of different size
if ( ( unsigned int)review_move_reasons( move, &v47, color, v48, ( __m128)LODWORD( score), allowed_moves, a6) 
                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1091:42: error: too many arguments to function call, expected 2, have 3
record_top_move( *move, *( float *)&v30, 0.0); 
~~~~~~~~~~~~~~~                          ^~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/liberty.h:456:1: note: 'record_top_move' declared here
void record_top_move(int move, float val);
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1093:24: error: use of undeclared identifier 'dword_9B4D6C'
if ( v47 > *( float *)&dword_9B4D6C[19 * ( *move / 20) - 19 + v38] ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1094:13: error: use of undeclared identifier 'dword_9B4D6C'
*( float *)&dword_9B4D6C[19 * ( *move / 20) - 19 + v38] = v47; 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1126:42: error: too many arguments to function call, expected 2, have 3
record_top_move( *move, *( float *)&v40, *( float *)&v21); 
~~~~~~~~~~~~~~~                          ^~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/liberty.h:456:1: note: 'record_top_move' declared here
void record_top_move(int move, float val);
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1128:24: error: use of undeclared identifier 'dword_9B4D6C'
if ( v47 > *( float *)&dword_9B4D6C[19 * ( *move / 20) - 19 + v41] ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1129:13: error: use of undeclared identifier 'dword_9B4D6C'
*( float *)&dword_9B4D6C[19 * ( *move / 20) - 19 + v41] = v47; 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1162:24: error: use of undeclared identifier 'dword_9B4D6C'
if ( v43 > *( float *)&dword_9B4D6C[19 * ( *move / 20) - 19 + v44] ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/engine/genmove.c:1163:13: error: use of undeclared identifier 'dword_9B4D6C'
*( float *)&dword_9B4D6C[19 * ( *move / 20) - 19 + v44] = v43; 
            ^
24 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_genmove/src/obj/1/genmove.o] Error 1
